Fix : Left side content alignment

--- a/src/index.css
+++ b/src/index.css
@@ -377,7 +377,7 @@ a {
   font-size: 1.25rem;
   font-weight: 600;
   line-height: 1.4;
-  text-align: center;
+  text-align: left;
 }
 
 .stats-grid {
@@ -406,7 +406,7 @@ a {
   opacity: 0.9;
 }
 
-                @media (min-width: 769px) {
+@media (min-width: 769px) {
   .stats-container {
     padding-left: 0;
   }
